# CLionProjects

6.12/: CMakeLists.txt  main.cpp
CS 142 Project 3/: CMakeLists.txt  main.cpp
CS142-Project 4/: CMakeLists.txt  main.cpp
CS142FinalQ1/: CMakeLists.txt  Toy.cpp  Toy.h  main.cpp
CS142FinalQ2/: CMakeLists.txt  main.cpp
CS142FinalQ3/: CMakeLists.txt  main.cpp
CS142Lab8/: CMakeLists.txt  main.cpp
CS142Labs/: CMakeLists.txt  main.cpp
CS142Midterm2Q1/: CMakeLists.txt  main.cpp
CS142Midterm2Q2/: CMakeLists.txt  main.cpp
CS142Midterm2Q3/: CMakeLists.txt  main.cpp
CS142Midterm2Q4/: CMakeLists.txt  main.cpp
CS142OnlineShoppingCartProject/: CMakeLists.txt  ItemToPurchase.cpp  ItemToPurchase.h  main.cpp
Lab5/: CMakeLists.txt  main.cpp
untitled/: CMakeLists.txt  FirstDay.cpp  FirstDay.h  hiThere.cpp
untitled1/: main.cpp
untitled2/: main.cpp
